force-app/main/default/objects/Task_Matrix__c/Task_Matrix__c.object-meta.xml
<CustomObject>
    <description>This object holds list of standard set of tasks that will be used to create standard Tasks for Project Proposal object</description>
    <label>Task Matrix</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Task Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Matrices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>