force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Activity_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Activity_Date_Formula__c</fullName>
    <formula>IF (
!ISBLANK(I_RS_Days_Until_Activity_Date__c),
TODAY() + I_RS_Days_Until_Activity_Date__c,
NULL)</formula>
    <label>Activity Date (Formula)</label>
    <type>Date</type>
</CustomField>