force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
                <isActive>false</isActive>
                <label>Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>