force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Asignee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Asignee__c</fullName>
    <description>Who the task should be assigned to.</description>
    <inlineHelpText>Who the task should be assigned to.</inlineHelpText>
    <label>Asignee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Research Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>