force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Days_Until_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Days_Until_Activity_Date__c</fullName>
    <description>e.g. 7 days means when the Activity is created, the Activity Date will be 7 days from today</description>
    <inlineHelpText>e.g. 7 days means when the Activity is created, the Activity Date will be 7 days from today</inlineHelpText>
    <label>Days Until Activity Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>