force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Description__c</fullName>
    <description>Maps to Comments field on Task</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>