force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Inactive__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Tasks for this Task Matrix record are not created during automations. Activating it does not retroactively create Tasks from updates that occurred previously.</description>
    <inlineHelpText>If checked, Tasks for this Task Matrix record are not created during automations. Activating it does not retroactively create Tasks from updates that occurred previously.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>