force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_Name__c</fullName>
    <description>Label/API Name of the Salesforce Object for which the &quot;tasks&quot; need to be created at the creation of project proposal or whenever the status of project proposal changes</description>
    <inlineHelpText>Label/API Name of the Salesforce Object for which the &quot;tasks&quot; need to be created at the creation of project proposal or whenever the status of project proposal changes</inlineHelpText>
    <label>Object Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project_Proposal__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>