force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Project_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal_Status__c</fullName>
    <label>Project Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Record_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Project_Proposal_Status</valueSetName>
    </valueSet>
</CustomField>