force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_Type__c</fullName>
    <description>Name of the Record Type related to the Salesforce Object for which the Task has to be created.</description>
    <inlineHelpText>Name of the Record Type related to the Salesforce Object for which the Task has to be created.</inlineHelpText>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Object_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>I_RS_Contract_La_Trobe_template</fullName>
                <label>Contract (La Trobe Template)</label>
            </value>
            <value>
                <fullName>I_RS_Contract_client_template</fullName>
                <label>Contract (Client Template)</label>
            </value>
            <value>
                <fullName>I_RS_Grant_with_limited_applications</fullName>
                <label>Grant with limited applications</label>
            </value>
            <value>
                <fullName>I_RS_Notice_of_intention</fullName>
                <label>Notice of intention</label>
            </value>
            <value>
                <fullName>I_RS_Other_grants</fullName>
                <label>Other grants</label>
            </value>
            <value>
                <fullName>I_RS_Proposal</fullName>
                <label>Proposal</label>
            </value>
            <value>
                <fullName>I_RS_Recommendation</fullName>
                <label>Recommendation</label>
            </value>
            <value>
                <fullName>I_RS_Non_Public_Proposal</fullName>
                <label>Non Public Proposal</label>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>I_RS_Project</fullName>
                <label>Project</label>
            </value>
            <value>
                <fullName>PRM Opportunity</fullName>
                <default>true</default>
                <label>PRM Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>