force-app/main/default/objects/Task_Matrix__c/fields/I_RS_Subject__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Subject__c</fullName>
    <description>The value in this field will be the &quot;Subject&quot; of the Task.</description>
    <inlineHelpText>The value in this field will be the &quot;Subject&quot; of the Task.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>