force-app/main/default/objects/Task_Matrix__c/fields/L_PR_Agreement_Stage__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Agreement_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>