force-app/main/default/objects/Task_Matrix__c/fields/L_PR_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Finalisation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>