force-app/main/default/objects/Task_Matrix__c/fields/L_PR_Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Sub_Type__c</fullName>
    <label>Opportunity Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Sub_Type</valueSetName>
    </valueSet>
</CustomField>