force-app/main/default/objects/Task_Matrix__c/recordTypes/L_PR_Task_Matrix.recordType-meta.xml
<RecordType>
    <fullName>L_PR_Task_Matrix</fullName>
    <active>true</active>
    <label>PRM-Task Matrix</label>
</RecordType>