force-app/main/default/objects/Task_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_PR_Opportunity_Sub_Type__c</columns>
    <columns>I_RS_Subject__c</columns>
    <columns>L_PR_Opportunity_Stage__c</columns>
    <columns>I_RS_Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>